<resources>
    <string name="app_name">Samurai</string>
    <string name="button">Button</string>
    <string name="close_app">Close app</string>
    <string name="go_activity_3">Go activity 3</string>
    <string name="go_activity_2">Go activity 2</string>
    <string name="go_activity_4">Go activity 4</string>
    <string name="secondLevel">You are on the second level</string>
    <string name="PlayGame">The game has begun!!!</string>
    <string name="clickedSecondItem">Clicked second item</string>
    <string name="firstKey">First key</string>
    <string name="secondKey">Second key</string>
    <string name="treeKey">Tree key</string>
    <string name="noDate">NULL</string>
    <string name="go_to_the_next_level_2">Log IN</string>
    <string name="welcome_human">Welcome human!!!</string>
    <string name="go_to_the_next_level_3">Go to the next level 3</string>
    <string name="go_to_activity_4">Go to activity 4</string>
    <string name="activity_3">Activity 3</string>
    <string name="registration">Registration</string>
    <string name="Confirm">Confirmation of entered data.</string>
    <string name="yes">Yes</string>
    <string name="loginProgress">Login in progress</string>
    <string name="no">No</string>
    <string name="LoginIncorrectly">Login entered incorrectly</string>
    <string name="PasswordEnteredIncorrectly">Password entered incorrectly</string>
    <string name="enter_your_password">Enter your password</string>
    <string name="login">Login</string>
    <string name="enter_your_name">Enter your name</string>
    <string name="todo">TODO</string>
    <string name="activity_4">Activity 4</string>
    <string name="registration4">Registration</string>
    <string name="enter_your_email">Enter your Email</string>
    <string name="enter_your_login">Enter your login</string>
    <string name="repeat_the_entered_password">Repeat the entered password</string>
    <string name="register">Register</string>
    <string name="choose_an_icon">Choose an icon</string>
    <string name="option_1">Option 1</string>
    <string name="todo2">TODO</string>
    <string name="option_2">Option 2</string>
    <string name="todo23">TODO</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="PasswordsDoNotMatch">Passwords do not match</string>
    <string name="EmailEnteredIncorrectly">Email entered incorrectly</string>
    <string name="invalidEmail">Invalid email</string>
    <string name="armor_samurai">Armor samurai</string>
    <string name="weapon_samurai">Weapon samurai</string>
    <string name="details">Details</string>
    <string name="Wonderful">Wonderful!!!</string>
    <string name="Congratulations">Congratulations on your successful registration.</string>
    <string name="continueDialog">Continue</string>
    <string name="mainscreen">Main Screen</string>
    <string name="letcontinue">Let\'s continue</string>
    <string name="imageviewclicked">ImageView clicked</string>
    <string name="logout">Logout</string>
    <string name="go_to_menu">Go to menu</string>
    <string name="welcome">\"Welcome \"</string>
    <string name="your_password">\"!!! Your password \"</string>
    <string name="mango">Mango</string>
    <string name="_06_05_1993">06/05/1993</string>
    <string name="name">Name</string>
    <string name="user_name">User name</string>
    <string name="email">Email</string>
    <string name="website">Website</string>
    <string name="company">Company:</string>
    <string name="address">Address:</string>
    <string name="phone">Phone</string>
    <string name="street">street</string>
    <string name="companyname">CompanyName</string>
    <string name="catchphrase">catchPhrase</string>
    <string name="bs">bs</string>
    <string name="suite">suite</string>
    <string name="city">city</string>
    <string name="zipcode">zipcode</string>
    <string name="geo_lat">geo.lat</string>
    <string name="geo_lng">geo.lng</string>
    <string name="samurai_fragment">Samurai Fragment</string>
    <string name="favorites_fragment">Favorites Fragment</string>
    <string name="search">Search</string>
</resources>