<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/grey"
    android:orientation="vertical"
    tools:context=".HomeWork1.MainActivity4">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:backgroundTint="#000000"
        android:bufferType="normal"
        android:text="@string/registration4"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textIsSelectable="false"
        android:textSize="30sp"
        android:textStyle="bold" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayoutEmail"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:hint="@string/enter_your_email">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etTextEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayoutLogin"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:hint="@string/enter_your_login">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etTextLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayoutPassword"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:hint="@string/enter_your_password"
        app:passwordToggleEnabled="true"
        tools:ignore="MissingConstraints">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etTextPasswordRegistration"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayoutPassword2"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:hint="@string/repeat_the_entered_password"
        app:passwordToggleEnabled="true"
        tools:ignore="MissingConstraints">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etTextPasswordRegistration2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </com.google.android.material.textfield.TextInputLayout>

    <androidx.cardview.widget.CardView
        android:layout_width="200dp"
        android:layout_height="250dp"
        android:layout_gravity="center_horizontal"
        app:cardBackgroundColor="#74CCCBCB"
        tools:context=".HomeWork1.MainActivity5"
        app:cardCornerRadius="50dp">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="246dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textViewLogin"
                android:layout_width="194dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/choose_an_icon"
                android:textAlignment="center"
                android:textSize="20sp"
                android:textStyle="bold" />

            <RadioButton
                android:id="@+id/rb1"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:text="@string/option_1" />

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginVertical="1dp"
                android:contentDescription="@string/todo2"
                android:foregroundGravity="left|center|center_horizontal"
                app:srcCompat="@drawable/login" />

            <RadioButton
                android:id="@+id/rb2"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:text="@string/option_2" />

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginVertical="1dp"
                android:contentDescription="@string/todo23"
                android:foregroundGravity="left|center|center_horizontal"
                app:srcCompat="@drawable/samurai_login"
                tools:ignore="ContentDescription" />

        </androidx.appcompat.widget.LinearLayoutCompat>

    </androidx.cardview.widget.CardView>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn10"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_margin="20dp"
        android:text="@string/register" />


</androidx.appcompat.widget.LinearLayoutCompat>